--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,9 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+# env with private firebase keys not visible
+# env.example still followed by Git to let other developers know about config structure
+.env
+!.env.example
 
 *.tsbuildinfo
