--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "firebase": "^10.7.1",
     "pinia": "^2.1.7",
-    "vue": "^3.3.11",
+    "vue": "^3.4.3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
