--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shadow-boxing-app",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/vue": "^8.1.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^18.19.3",
