--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "test:unit": "vitest",
+    "test": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -33,19 +33,19 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.49.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^23.0.1",
+    "jsdom": "^24.1.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
-    "vitest": "^1.0.4",
+    "vitest": "^1.6.0",
     "vue-tsc": "^1.8.25"
   }
 }
