--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/vue": "^8.1.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
