--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vitest": "^1.6.0",
+    "vue-router-mock": "^1.1.0",
     "vue-tsc": "^1.8.25"
   }
 }
