--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+# ignoring readme graphic files
+/public/readme-graphics
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
